--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Viktor’s Projects</title>
+  <title>Izglītojošas Spēles</title>
   <meta name="description" content="Project hub: ChemGame and ArtGallery." />
   <style>
     :root { color-scheme: dark light; }
@@ -69,8 +69,8 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Viktor’s Project Hub</h1>
-      <p>Quick access to my deployed apps and games.</p>
+      <h1>Izglītojošas Spēles</h1>
+      <p>Saites uz spēlēm</p>
     </header>
 
     <main class="grid">
