--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 
     <footer>
       <div>Hosted on <code>GitHub Pages</code>. Add more cards as you ship more projects.</div>
+      <div>Epasts <code>viktoraspeles at gmail.com</code> </div>
     </footer>
   </div>
 </body>
