--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
     <main class="grid">
       <section class="card">
-        <h2>ChemGame</h2>
-        <div class="meta">Hosted on AWS Lambda</div>
-        <p class="desc">A small game for learning chemical names / element symbols.</p>
+        <h2>Ķīmijas Anagrammas</h2>
+        <div class="meta"></div>
+        <p class="desc">Izviedo vārdu no elementu simboliem</p>
         <div class="actions">
           <a class="btn primary" href="https://ugivkxyzf4vyfay4a2h3vvrnma0aanfc.lambda-url.eu-north-1.on.aws/" target="_blank" rel="noopener noreferrer">
             Open ChemGame
@@ -89,15 +89,15 @@
       </section>
 
       <section class="card">
-        <h2>ArtGallery Game</h2>
-        <div class="meta">Hosted on PythonAnywhere</div>
-        <p class="desc">Art guessing / gallery-style game.</p>
+        <h2>Lasišanas Trenažieris</h2>
+        <div class="meta"></div>
+        <p class="desc">Iekopē savu textu, ģenerē jautājumus un sāc lasīt!</p>
         <div class="actions">
-          <a class="btn primary" href="https://readapp.pythonanywhere.com/" target="_blank" rel="noopener noreferrer">
-            Open ArtGallery
+          <a class="btn primary" href="http://13.60.195.53/" target="_blank" rel="noopener noreferrer">
+            Sāc lasīt!
           </a>
-          <a class="btn" href="https://readapp.pythonanywhere.com/" target="_blank" rel="noopener noreferrer">
-            Copy Link
+          <a class="btn" href="http://13.60.195.53/" target="_blank" rel="noopener noreferrer">
+            Links
           </a>
         </div>
       </section>
