--- a/index.html
+++ b/index.html
@@ -80,10 +80,7 @@
         <p class="desc">Izviedo vārdu no elementu simboliem</p>
         <div class="actions">
           <a class="btn primary" href="https://ugivkxyzf4vyfay4a2h3vvrnma0aanfc.lambda-url.eu-north-1.on.aws/" target="_blank" rel="noopener noreferrer">
-            Open ChemGame
-          </a>
-          <a class="btn" href="https://ugivkxyzf4vyfay4a2h3vvrnma0aanfc.lambda-url.eu-north-1.on.aws/" target="_blank" rel="noopener noreferrer">
-            Copy Link
+            Sāc minēt!
           </a>
         </div>
       </section>
@@ -95,9 +92,6 @@
         <div class="actions">
           <a class="btn primary" href="http://13.60.195.53/" target="_blank" rel="noopener noreferrer">
             Sāc lasīt!
-          </a>
-          <a class="btn" href="http://13.60.195.53/" target="_blank" rel="noopener noreferrer">
-            Links
           </a>
         </div>
       </section>
